Fixed final scrollbar problems

--- a/webapp/src/components/Questions.module.css
+++ b/webapp/src/components/Questions.module.css
@@ -9,34 +9,32 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .modalContent {
     background-color: #e3f1fd;
-    padding: 16px;
+    padding: 20px;
     width: 60%;
     min-width: 350px;
     max-width: 800px;
+    border-radius: 10px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.8);
     height: auto;
     max-height: 80vh;
     overflow-y: auto;
     overflow-x: hidden;
-    scrollbar-width: thin;
+    scrollbar-width: none;
     scrollbar-color: #4f93d7 #e3f1fd;
-    margin-left: -14px;
     box-sizing: border-box;
-    padding-right: 10px;
 }
-
-
 
 .questionList {
     list-style-type: none;
     padding: 0;
-    margin-top: 20px;
+    margin-top: 20px; /* ← más espacio arriba */
     color: #000000;
-    text-align: center;
+    text-align: center; /* ← centrado */
 }
 
 .questionItem {
@@ -84,8 +82,4 @@
 
 .closeButton:hover {
     background-color: #A0A0A0;
-}
-
-.modalOverlay {
-    z-index: 9999;
 }
